--- a/webapp/Chalk_and_Slate/app.css
+++ b/webapp/Chalk_and_Slate/app.css
@@ -68,11 +68,28 @@ ul {
 }
 
 #main-quote {
-    font-family: 'Open Sans', sans-serif;
     color: #000000;
     font-style: italic;
     text-align: center;
-    padding: 35px 10px 0px 10px;
-    margin: 10px;
+    padding: 0px 0px 0px 0px;
+    margin: 0px;
     font-size: 1.3em;
+}
+
+#main-quote p{
+    color: #000000;
+    font-style: italic;
+    text-align: center;
+    padding: 0px 0px 0px 0px;
+    margin: 0px;
+    font-size: 1.3em;
+}
+
+#main-quote a{
+    color: #000000;
+    font-style: italic;
+    text-align: center;
+    padding: 0px 0px 0px 0px;
+    margin: 10px;
+    font-size: .7em;
 }
