--- a/webapp/Chalk_and_Slate/app.css
+++ b/webapp/Chalk_and_Slate/app.css
@@ -5,16 +5,16 @@ body {
 
 ul {
     list-style-type: none;
-    background-color: #424242;
     overflow: hidden;
     padding: 0;
     margin: 0;
 }
+img {
+    display: block;
+    margin: auto;
+}
 
 /* UPPER CONTAINER */
-#upperContainer {
-    height: 64px;
-}
 #logoContainer {
     display: inline-block;
 }
@@ -23,33 +23,58 @@ ul {
     text-align: right;
     vertical-align: middle;
 }
+#userNameContainer span {
+    padding-top: 10px;
+    padding-right: 10px;
+}
 .top-bottom-padding {
     padding: 10px 0px;
 }
 
-/* NAVBAR LINKS */
-#navbarList > li {
-    float: left;
-}
-#navbarList > li.active {
-    background-color: #A5E2D4;
-    color: #424242;
-}
-#navbarList > li a {
+/* NAVBAR/FOOTER UNIVERSAL STYLES */
+.linkList > li a {
     display: block;
     text-align: center;
     padding: 14px 16px;
-}
-
-.linkList > li a {
-    color: #A5E2D4;
     text-decoration: none;
+    font-weight: bold;
 }
 
 .linkList > li a:hover {
-    background-color: #111;
     text-decoration: none;
+}
+
+/* NAVBAR LINKS */
+#navbarList {
+    border: 1px solid #424242;
+    text-align: center;
+}
+#navbarList > li {
+    display: inline-block;
+    margin-left: -4px;
+}
+#navbarList > li a {
+    color: #424242;
+}
+#navbarList > li.active {
+    background-color: #424242;
     color: #A5E2D4;
+}
+#navbarList > li.active a {
+    color: #A5E2D4;
+}
+#navbarList > li a:hover {
+    color: #A5E2D4;
+    background-color: #111;
+}
+
+/* FOOTER LINKS */
+#footerLinks {
+    margin-bottom: 0;
+    background-color: #424242;
+}
+#footerLinks > li a {
+    color: #FFF;
 }
 
 /* BODY CONTAINER */
@@ -59,24 +84,18 @@ ul {
     max-width: 100%;
 }
 
-/* FOOTER */
-#footerLinks > li {
-    height: 44px;
-}
-#footerLinks > li a {
-    display:grid;
-}
-
+/* QUOTES */
 #main-quote {
     color: #000000;
     font-style: italic;
     text-align: center;
-    padding: 0px 0px 0px 0px;
+    padding: 0px 0px 10px 0px;
     margin: 0px;
     font-size: 1.3em;
+    line-height: 1em;
 }
 
-#main-quote p{
+#main-quote p {
     color: #000000;
     font-style: italic;
     text-align: center;
@@ -85,11 +104,24 @@ ul {
     font-size: 1.3em;
 }
 
-#main-quote a{
+#main-quote a {
     color: #000000;
     font-style: italic;
     text-align: center;
     padding: 0px 0px 0px 0px;
     margin: 10px;
     font-size: .7em;
+}
+
+/* COPYRIGHT */
+#copyrightContainer {
+    background-color: #424242;
+    color: #FFF;
+    padding: 20px 0px;
+}
+.copyrightText {
+    display: block;
+    text-align: center;
+    font-style: italic;
+    font-size: .8em;
 }
