--- a/webapp/Chalk_and_Slate/app.css
+++ b/webapp/Chalk_and_Slate/app.css
@@ -125,3 +125,97 @@ img {
     font-style: italic;
     font-size: .8em;
 }
+
+/* Full-width inputs */
+input[type=text], input[type=password] {
+    width: 100%;
+    padding: 12px 20px;
+    margin: 8px 0;
+    display: inline-block;
+    border: 1px solid #ccc;
+    box-sizing: border-box;
+    border-radius: 5px;
+
+}
+
+/* Set a style for all buttons */
+
+/* Add a hover effect for buttons */
+cancelbutton:hover {
+    opacity: 0.8;
+}
+
+/* Extra style for the cancel button (red) */
+.cancelbtn {
+    background-color: #ff0000;
+    color: white;
+    padding: 14px 20px;
+    margin: 8px 0;
+    border: none;
+    cursor: pointer;
+    width: 100%;
+    width: auto;
+    padding: 10px 18px;
+}
+
+.loginbtn {
+  color: #424242;
+  padding: 14px 20px;
+  margin: 8px 0;
+  border: 1px solid #424242;
+  cursor: pointer;
+  border-radius: 5px;
+  width: 100%;
+  width: auto;
+  padding: 10px 18px;
+  background-color: #a5e2d4;
+
+}
+
+.rememberlabel {
+  padding-top: 3%;
+  padding-right: 5%;
+  float: right;
+}
+
+/* Add padding to containers */
+.container-login {
+    width: 600px;
+    padding-top: 10%;
+    padding-right: 20px;
+    padding-bottom: 0px;
+    padding-left: 20px;
+    margin: 0 auto;
+
+}
+
+.container-login3 {
+    width: 600px;
+    padding-top: 10px;
+    padding-right: 20px;
+    padding-bottom: 0px;
+    padding-left: 20px;
+    margin: 0 auto;
+    border-radius: 5px;
+    background-color: rgba(241, 241, 241, .8)
+}
+
+.bodylogin {
+   background-image: url("00_Heal_BattleBuilding_CoverImage1.jpg");
+   background-color: #cccccc;
+   -webkit-background-size: cover;
+   -moz-background-size: cover;
+   -o-background-size: cover;
+   background-size: cover;
+}
+
+/* The "Forgot password" text */
+span.psw {
+    float: right;
+    padding-top: 3%;
+    padding-right: 2%;
+}
+
+span.psw a{
+    color: #266868;
+}
